Microsft Edge & Crypto Secret --- - Split ProvenDocs Secret and Crypto Secret into two different variables. - Split ProvenDocs Secret and Growsurf Secret into to different variables. - Fixed styling of Downloads Page on Microsoft Edge. - Removed Snap function from home page as it doesn't work well with other browsers. - Fixed issue with scrollbars on thumbnails on Edge. - Fixed issue with scrollbars on proof in progress screen on Edge.

--- a/src/client/components/Dashboard/ViewFiles.scss
+++ b/src/client/components/Dashboard/ViewFiles.scss
@@ -424,6 +424,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        overflow: hidden;
 
         div.ant-spin {
           display: flex;
@@ -497,7 +498,6 @@
         height: 100%;
         width: 100%;
         padding-top: 0px;
-        overflow-y: scroll;
         background-color: unset;
 
         svg {
