--- a/src/client/components/ViewProof/ProofDiagram.scss
+++ b/src/client/components/ViewProof/ProofDiagram.scss
@@ -29,6 +29,7 @@
   flex-direction: column;
   width: 100%;
   flex-grow: 1;
+  overflow-y: auto;
 
   .proofSteps {
     display: flex;
